Setup Clever Cloud config files

--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,7 @@ production:
   database: rails_mister_cocktail_production
   username: rails_mister_cocktail
   password: <%= ENV['RAILS_MISTER_COCKTAIL_DATABASE_PASSWORD'] %>
+
+  production:
+  <<: *default
+  url: <%= ENV['POSTGRESQL_ADDON_URI'] %>
